--- a/02c/index.html
+++ b/02c/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-<div id="form"></div>
+<div id="app"></div>
 
-<script src="https://unpkg.com/vue@next"></script>
+<script src="https://unpkg.com/vue@3.0.11"></script>
 <script src="main.js"></script>
 
 </body>
